feat: backend api reworked
