# apps/backend/internal/adapters/oas/oas_router_gen.go
@@ -61,6 +61,46 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 				break
 			}
 			switch elem[0] {
+			case 'a': // Prefix: "allocations"
+
+				if l := len("allocations"); len(elem) >= l && elem[0:l] == "allocations" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch r.Method {
+					case "GET":
+						s.handleListAllocationsRequest([0]string{}, elemIsEscaped, w, r)
+					default:
+						s.notAllowed(w, r, "GET")
+					}
+
+					return
+				}
+
+			case 'e': // Prefix: "envelopes"
+
+				if l := len("envelopes"); len(elem) >= l && elem[0:l] == "envelopes" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch r.Method {
+					case "GET":
+						s.handleListEnvelopesRequest([0]string{}, elemIsEscaped, w, r)
+					default:
+						s.notAllowed(w, r, "GET")
+					}
+
+					return
+				}
+
 			case 'm': // Prefix: "me"
 
 				if l := len("me"); len(elem) >= l && elem[0:l] == "me" {
@@ -70,6 +110,7 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 				}
 
 				if len(elem) == 0 {
+					// Leaf node.
 					switch r.Method {
 					case "GET":
 						s.handleGetCurrentUserRequest([0]string{}, elemIsEscaped, w, r)
@@ -78,28 +119,6 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 					}
 
 					return
-				}
-				switch elem[0] {
-				case '/': // Prefix: "/allocations"
-
-					if l := len("/allocations"); len(elem) >= l && elem[0:l] == "/allocations" {
-						elem = elem[l:]
-					} else {
-						break
-					}
-
-					if len(elem) == 0 {
-						// Leaf node.
-						switch r.Method {
-						case "GET":
-							s.handleGetCurrentUserAllocationsRequest([0]string{}, elemIsEscaped, w, r)
-						default:
-							s.notAllowed(w, r, "GET")
-						}
-
-						return
-					}
-
 				}
 
 			case 'p': // Prefix: "periods"
@@ -354,6 +373,56 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 				break
 			}
 			switch elem[0] {
+			case 'a': // Prefix: "allocations"
+
+				if l := len("allocations"); len(elem) >= l && elem[0:l] == "allocations" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch method {
+					case "GET":
+						r.name = ListAllocationsOperation
+						r.summary = "Get allocations for a period (and optional user)"
+						r.operationID = "listAllocations"
+						r.operationGroup = ""
+						r.pathPattern = "/allocations"
+						r.args = args
+						r.count = 0
+						return r, true
+					default:
+						return
+					}
+				}
+
+			case 'e': // Prefix: "envelopes"
+
+				if l := len("envelopes"); len(elem) >= l && elem[0:l] == "envelopes" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch method {
+					case "GET":
+						r.name = ListEnvelopesOperation
+						r.summary = "List all envelopes"
+						r.operationID = "listEnvelopes"
+						r.operationGroup = ""
+						r.pathPattern = "/envelopes"
+						r.args = args
+						r.count = 0
+						return r, true
+					default:
+						return
+					}
+				}
+
 			case 'm': // Prefix: "me"
 
 				if l := len("me"); len(elem) >= l && elem[0:l] == "me" {
@@ -363,6 +432,7 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 				}
 
 				if len(elem) == 0 {
+					// Leaf node.
 					switch method {
 					case "GET":
 						r.name = GetCurrentUserOperation
@@ -376,33 +446,6 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 					default:
 						return
 					}
-				}
-				switch elem[0] {
-				case '/': // Prefix: "/allocations"
-
-					if l := len("/allocations"); len(elem) >= l && elem[0:l] == "/allocations" {
-						elem = elem[l:]
-					} else {
-						break
-					}
-
-					if len(elem) == 0 {
-						// Leaf node.
-						switch method {
-						case "GET":
-							r.name = GetCurrentUserAllocationsOperation
-							r.summary = "Get current user's allocation for current period"
-							r.operationID = "getCurrentUserAllocations"
-							r.operationGroup = ""
-							r.pathPattern = "/me/allocations"
-							r.args = args
-							r.count = 0
-							return r, true
-						default:
-							return
-						}
-					}
-
 				}
 
 			case 'p': // Prefix: "periods"
